@@ -1,1 +1,15 @@
 # oh2_harjoitustyo
+
+## Status:
+- UI elements mostly implemented
+- Functionality with user events missing entirely
+- Everything else mostly implemented
+
+### Usage
+- Compile with
+`javac --module-path $your_javafx_path --add-modules javafx.controls main.java`
+- Use with
+`java --module-path $your_javafx_path --add-modules javafx.controls main`
+
+
+
